compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__bit_array_size_unknown_module.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub fn run(data) {\n  case data {\n    <<x:bytes-size(unknown.chunk_size), _:bits>> -> x\n    _ -> data\n  }\n}\n"
---
----- SOURCE CODE

pub fn run(data) {
  case data {
    <<x:bytes-size(unknown.chunk_size), _:bits>> -> x
    _ -> data
  }
}


----- ERROR
error: Unknown module
  ┌─ /src/one/two.gleam:4:20
  │
4 │     <<x:bytes-size(unknown.chunk_size), _:bits>> -> x
  │                    ^^^^^^^

No module has been found with the name `unknown`.
